big overhaul on the connect tool

--- a/numbers/tmpl/cnam_dialog.html
+++ b/numbers/tmpl/cnam_dialog.html
@@ -7,12 +7,12 @@
                 <h3>Default Caller ID Name</h3>
             {{/if}}
             <div class="icon caller_id blue"></div>
-            <form id="cnam" name="cnam" method="post" action="#">
+            <form id="cnam" method="post" action="#">
                 <p class="clear">When you call someone, show this as your name on their Caller ID Device:</p>
 
                 <div>
                     <label>Caller ID Name: </label>
-                    <input type="text" name="cid_name" class="field_last" value="${cid_name}"/>
+                    <input type="text" name="display_name" class="field_last" value="${display_name}"/>
                 </div>
 
                 <p class="note_box clear">Note: These requests take up to 72 hours to process and can only be placed once every 72 hours.</p>
