--- a/endpoints/tmpl/endpoint.html
+++ b/endpoints/tmpl/endpoint.html
@@ -3,7 +3,12 @@
         <div class="title">
             <a class="remove_server" data-serverid="${serverid}" href="#" title="Remove Server - ${server_name}" style="display:none; vertical-align: middle; float: left; max-width: 1.5em;"><img class="icon error" style="max-width: 1.5em; vertical-align: middle;"></a>
             <span class="name">${server_name}</span>
-            <span class="status"><a href="#" class="modifyServerDefaults" data-serverid="${serverid}">Update</a> - <a href="#" class="deleteServer" data-serverid="${serverid}">Delete</a></span>
+            <span class="status">
+                {{if not_editable}}{{else}}
+                    <a href="#" class="modifyServerDefaults" data-serverid="${serverid}">Update</a>&nbsp;-&nbsp;
+                    <a href="#" class="deleteServer" data-serverid="${serverid}">Delete</a>
+                {{/if}}
+            </span>
         </div>
         <div class="sip" style="display:none;">
             {{if auth.auth_method == "IP"}}
