--- a/numbers/tmpl/add_number_dialog.html
+++ b/numbers/tmpl/add_number_dialog.html
@@ -17,9 +17,10 @@
                 </form>
 
                 <a id="search_numbers_button" class="ctr_btn clear" href="#">Search</a>
-
+            </div>
                 <div id="foundDIDList"/>
 
+            <div class="stylized myform">
                 <div class="search_icon"/>
 
                 <br /><br />
