--- a/numbers/tmpl/e911_dialog.html
+++ b/numbers/tmpl/e911_dialog.html
@@ -1,8 +1,8 @@
 <div>
     <div class="popup edit_e911">
         <div class="stylized myform">
-            {{if did}}
-                <h3>E911 Service Location for ${did}</h3>
+            {{if phone_number}}
+                <h3>E911 Service Location for ${phone_number}</h3>
             {{else}}
                 <h3>Default E911 Service Location</h3>
             {{/if}}
@@ -12,27 +12,37 @@
 
                 <div>
                     <label>Address</label>
-                    <input type="text" name="address" value="${address}" />
+                    <input type="text" name="street_address" value="${street_address}" />
+                </div>
+
+                <div>
+                    <label>Ext. Address</label>
+                    <input type="text" name="extended_address" value="${extended_address}" />
                 </div>
 
                 <div>
                     <label>City</label>
-                    <input type="text" name="city" value="${city}" />
+                    <input type="text" name="locality" value="${locality}" />
                 </div>
 
                 <div>
                     <label>State</label>
-                    <input type="text" name="state" value="${state}" />
+                    <input type="text" name="region" value="${region}" />
                 </div>
 
                 <div>
                     <label>Postal Code</label>
-                    <input type="text" name="postalcode" value="${postalcode}" class="field_last"/>
+                    <input type="text" name="postal_code" value="${postal_code}"/>
                 </div>
-
+                {{if status}}
+                    <div>
+                        <label>Verify Location</label>
+                        &nbsp;&nbsp;<a href="http://maps.google.com/maps?q=${latitude},+${longitude}+(Your+E911+Location)&iwloc=A&hl=en" target="_blank">Google Maps</a>
+                    </div>
+                {{/if}}
                 <div class="clear"/>
 
-                <a class="submit_btn clear ctr" href="#">Submit</a>
+                <a class="submit_btn clear ctr" style="margin-top:20px;" href="#">Submit</a>
             </form>
         </div>
     </div>
