--- a/numbers/tmpl/endpoint_number.html
+++ b/numbers/tmpl/endpoint_number.html
@@ -1,21 +1,21 @@
 <div>
     <div class="number_entry">
-        <span class="number" data-did="${did}" data-serverid="${serverid}">${did}</span>
+        <span class="number" data-phone_number="${phone_number}" data-serverid="${serverid}">${phone_number}</span>
 
         {{if options.failover}}
-            <a href="#" class="edit_failover active" title="${options.failover.e164}">Failover #</a>
+            <a href="#" class="edit_failover active">Failover #</a>
         {{else}}
             <a href="#" class="edit_failover">Failover #</a>
         {{/if}}
 
-        {{if options.caller_id}}
-            <a href="#" class="edit_cnam active" title="${options.caller_id.cid_name}">CID</a>
+        {{if options.cnam}}
+            <a href="#" class="edit_cnam active">CID</a>
         {{else}}
-            <a href="#" class="edit_cnam" title="Click to Set Outbound Caller ID Name (CNAM)">CID</a>
+            <a href="#" class="edit_cnam">CID</a>
         {{/if}}
 
-        {{if options.e911_info}}
-            <a href="#" class="edit_e911 active" title="${options.e911_info.Address}">e911</a>
+        {{if options[e911_key]}}
+            <a href="#" class="edit_e911 active">e911</a>
         {{else}}
             <a href="#" class="edit_e911">e911</a>
         {{/if}}
