--- a/numbers/tmpl/number.html
+++ b/numbers/tmpl/number.html
@@ -1,9 +1,9 @@
 <div>
     <div class="number_entry">
         {{if serverid}}
-            <span class="number ${status}" data-did="${did}" data-serverid="${serverid}">${did}</span>
+            <span class="number ${status}" data-phone_number="${phone_number}" data-serverid="${serverid}">${phone_number}</span>
         {{else}}
-            <span class="number ${status}" data-did="${did}">${did}</span>
+            <span class="number ${status}" data-phone_number="${phone_number}">${phone_number}</span>
         {{/if}}
 
         <span class="amount">$1.00</span>
