--- a/numbers/tmpl/add_number_search_results.html
+++ b/numbers/tmpl/add_number_search_results.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <h3 style="float:none;">Results</h3>
+        <h3 style="text-align: left;">Results</h3>
         <hr/>
         {{if data.length == 0}}
             <div class="errMsg">
@@ -15,7 +15,7 @@
                     </div>
                     {{each(i, phone_number) data}}
                         <div class="row">
-                            <div class="first column"><input class="select_number f_dids needCreditItem" type="checkbox" data-phone_number="${phone_number}"/></div>
+                            <div class="first column"><input type="checkbox" data-phone_number="${phone_number}"/></div>
                             <div class="second column">${phone_number}</div>
                         </div>
                     {{/each}}
