--- a/numbers/tmpl/failover_dialog.html
+++ b/numbers/tmpl/failover_dialog.html
@@ -1,27 +1,25 @@
 <div>
-    <div class="popup edit_failover">
-        <div class="stylized myform">
+    <div class="trunkstore_popup failover">
+        <div>
             <form id="failover" action="#">
                 {{if phone_number}}
                 <h3>Failover for ${phone_number}</h3>
                 {{else}}
                 <h3>Default Failover</h3>
                 {{/if}}
-                <div class="icon failover blue"></div>
 
-                <p class="note_box">If your phone system is unreachable for any reason, we can redirect a caller <br>to an alternate phone system, phone number or VoIP device.<br><br>Note: Failover places an outbound call to connect to your alternate device. <br>This will utilize another trunk/circuit on your account and bill accordingly, <br>the same way it would if you made an outbound call from a phone.</p>
+                <p class="note_box">
+                    If your phone system is unreachable for any reason, we can redirect a caller <br>to an alternate phone system, phone number or VoIP device.<br><br>Note: Failover places an outbound call to connect to your alternate device. <br>This will utilize another trunk/circuit on your account and bill accordingly, <br>the same way it would if you made an outbound call from a phone.
+                </p>
 
                 <div class="inline lg">
                     <label class="raw_input failover">Failover number</label>
                     <input type="text" name="raw_input" value="${failover}">
                 </div>
-                <a class="submit_btn clear ctr" href="#">Activate</a>
-
-                <div class="clear"/>
-
+               <div class="buttons_centered">
+                    <a class="fancy_button blue" href="#">Activate</a>
+                </div>
             </form>
-
         </div>
     </div>
-
 </div>
