--- a/numbers/tmpl/add_number_dialog.html
+++ b/numbers/tmpl/add_number_dialog.html
@@ -29,7 +29,7 @@
                 <div class="table2"/>
                 <p class="note_box">Each number you select will be added to your monthly invoice.</p>
                 <div class="buttons_centered">
-                    <a id="add_numbers_button" class="fancy_button blue" href="#">Add</a>
+                    <a id="add_numbers_button" class="fancy_button blue submit_btn" href="#">Add</a>
                 </div>
                 <div class="helpertext">Clicking the "Add Button" will charge your credit card</div>
             </div>
