--- a/numbers/tmpl/e911_dialog.html
+++ b/numbers/tmpl/e911_dialog.html
@@ -40,7 +40,7 @@
                     </div>
                 {{/if}}
                 <div class="buttons_centered">
-                    <a class="fancy_button blue" href="#">Submit</a>
+                    <a class="fancy_button blue submit_btn" href="#">Submit</a>
                 </div>
             </form>
         </div>
