WINKSTART-785: Trunkstore changes to add credit / trunks

--- a/sipservice/tmpl/main_services.html
+++ b/sipservice/tmpl/main_services.html
@@ -5,7 +5,9 @@
 
     <div id="credits"/>
 
-    <div class="addl" style="background-position:0px -40px; height:30px"/>
+    <div class="addl" style="background-position:0px -60px; height:10px"/>
 
-    <ul class="buttons"/>
+    <ul class="buttons">
+        <li><a class="manage" href="#">Edit these settings</a></li>
+    </ul>
 </div>
