--- a/channels/tmpl/channels.html
+++ b/channels/tmpl/channels.html
@@ -1,11 +1,8 @@
 <div>
     <div class="info" style="clear:both;">
-        <span class="channels num">${account.trunks}</span>
+        <span class="channels num outbound_trunks">${account.trunks}</span>
         <span class="channels detail">Two-Way Channels</span>
-        <span class="channels num">${account.inbound_trunks}</span>
+        <span class="channels num inbound_trunks">${account.inbound_trunks}</span>
         <span class="channels detail">Inbound Channels</span>
-        <span id="addCredsSpan">
-            <a href="#" id="edit_channels" class="button channels edit">Modify</a>
-        </span>
     </div>
 </div>
