WINKSTART-785: HTML5 upgrade & css fixes

--- a/numbers/tmpl/cnam_dialog.html
+++ b/numbers/tmpl/cnam_dialog.html
@@ -17,7 +17,7 @@
                 <p class="note_box">Note: These requests take up to 72 hours to process and can only be placed once every 72 hours.</p>
 
                 <div class="buttons_centered">
-                    <a class="fancy_button blue submit_btn" href="#">Submit</a>
+                    <button class="fancy_button blue submit_btn" href="#">Submit</button>
                 </div>
             </form>
         </div>
