--- a/numbers/tmpl/failover_dialog.html
+++ b/numbers/tmpl/failover_dialog.html
@@ -17,7 +17,7 @@
                     <input type="text" name="raw_input" value="${failover}">
                 </div>
                <div class="buttons_centered">
-                    <a class="fancy_button blue submit_btn" href="#">Activate</a>
+                    <button class="fancy_button blue submit_btn" href="#">Activate</button>
                 </div>
             </form>
         </div>
