WINKSTART-785: Work in progress for logic of porting a number

--- a/numbers/tmpl/port_popup.html
+++ b/numbers/tmpl/port_popup.html
@@ -61,7 +61,7 @@
                         </div>
 
                         <div class="right_part">
-                            <textarea class="numbers_text" placeholder="Type your numbers here. One in each line."></textarea>
+                            <textarea class="numbers_text" name="phone_numbers" placeholder="Type your numbers here. One in each line."></textarea>
                         </div>
                         <div class="clear"/>
                     </div>
@@ -134,7 +134,7 @@
                     </div>
                     <div class="block">
                         <div class="title"><span class="icon check_circle"/>&nbsp;Terms and Conditions. <a href="http://wwww.2600hz.com/terms" target="_blank">Read Here</a></div>
-                        <div class="checkbox_line"><input type="checkbox"/>I accept the Terms and Conditions. I have read it and understand it.</div>
+                        <div class="checkbox_line"><input name="agreed" type="checkbox"/>I accept the Terms and Conditions. I have read it and understand it.</div>
                     </div>
                 </div>
                 <!--
