--- a/numbers/tmpl/port_popup.html
+++ b/numbers/tmpl/port_popup.html
@@ -42,7 +42,7 @@
                         </div>
 
                         <div class="right_part">
-                            <select name="carrier">
+                            <select class="carrier_dropdown" name="port.service_provider">
                                 <option value="empty">-- Select --</option>
                                 <option value="AT&T">AT&T</option>
                                 <option value="T-Mobile">T-Mobile</option>
@@ -76,7 +76,6 @@
 
                     <div class="split_div">
                         <div class="left_part">
-                            <div class="field"><label>Carrier</label><input type="text" name="port.service_provider"/></div>
                             <div class="field"><label>Name on Account</label><input type="text" name="port.billing_name"/></div>
                             <div class="field"><label>Account Id</label><input type="text" name="port.billing_account_id" /></div>
                             <div class="field"><label>Address</label><input type="text" name="port.billing_street_address"/></div>
@@ -119,22 +118,22 @@
 
                     <div class="loa_block">
                         3. Upload it here
-                        <div class="upload_block">Upload signed letter of authorization:&nbsp;&nbsp;<input type="file"/></div>
+                        <div class="upload_block">Upload signed letter of authorization:&nbsp;&nbsp;<input name="loa" class="loa" type="file"/></div>
                         <span class="port_help"><span class="validated invalid"/>If you're unable to upload the PDF document, then contact 2600hz representative for an alternative arrangment</span>
                     </div>
                 </div>
                 <div class="step_div fourth">
                     <div class="block">
                         <div class="title"><span class="icon down_arrow_circle"/>&nbsp;Please confirm the following</div>
-                        <div class="checkbox_line"><input type="checkbox"/>I understand the cost of porting is $5/number</div>
-                        <div class="checkbox_line"><input type="checkbox"/>I will not cancel my old service until the port is complete</div>
-                        <div class="checkbox_line"><input type="checkbox"/>I understand the porting process can take from 3 to 30 days</div>
-                        <div class="checkbox_line"><input type="checkbox"/>I understand my old carrier may charge an early termination fee</div>
-                        <div class="checkbox_line"><input type="checkbox"/>These numbers are standard phone numbers, not <a href="http://www.2600hz.com/features">features</a> (like star-ring)</div>
+                        <div class="checkbox_line"><input name="extra.cb.cost_porting" type="checkbox"/>I understand the cost of porting is $5/number</div>
+                        <div class="checkbox_line"><input name="extra.cb.cancel" type="checkbox"/>I will not cancel my old service until the port is complete</div>
+                        <div class="checkbox_line"><input name="extra.cb.porting_length" type="checkbox"/>I understand the porting process can take from 3 to 30 days</div>
+                        <div class="checkbox_line"><input name="extra.cb.termination_charge" type="checkbox"/>I understand my old carrier may charge an early termination fee</div>
+                        <div class="checkbox_line"><input name="extra.cb.standard_numbers" type="checkbox"/>These numbers are standard phone numbers, not <a href="http://www.2600hz.com/features">features</a> (like star-ring)</div>
                     </div>
                     <div class="block">
                         <div class="title"><span class="icon check_circle"/>&nbsp;Terms and Conditions. <a href="http://wwww.2600hz.com/terms" target="_blank">Read Here</a></div>
-                        <div class="checkbox_line"><input name="agreed" type="checkbox"/>I accept the Terms and Conditions. I have read it and understand it.</div>
+                        <div class="checkbox_line"><input name="extra.agreed" type="checkbox"/>I accept the Terms and Conditions. I have read it and understand it.</div>
                     </div>
                 </div>
                 <!--
