--- a/credits/tmpl/credits_popup.html
+++ b/credits/tmpl/credits_popup.html
@@ -12,31 +12,35 @@
 
                 <div class="pane">
                     <div id="flat_rate">
-                        <span>Flat-Rate calling allows you to pay a monthly, predictable fee that never changes, regardless of your usage.
+                        <div class="description">Flat-Rate calling allows you to pay a monthly, predictable fee that never changes, regardless of your usage.</div>
 
-                        <h2>Flat-Rate Outbound Calling</h2>
-                        <div class="trunk_line">
-                            <div class="left">I want to allow up to <input type="text" id="outbound_calls" size="2" value="${account.trunks}"/></div>
-                            <div class="right">simultaneous outbound calls at $29.99/month per line</div>
-                            <div class="clear"/>
+                        <div class="trunk_block">
+                            <h2><span class="icon right_arrow"/>  Flat-Rate Outbound Calling</h2>
+                            <div class="trunk_line">
+                                <div class="left">Allow up to<input type="text" id="outbound_calls" size="2" value="${account.trunks}"/></div>
+                                <div class="right">simultaneous outbound calls at <span class="price">$29.99/month</span> per line</div>
+                                <div class="clear"/>
+                            </div>
+
+                            <!--
+                            {{if internatinal}}
+                                <input type="checkbox" name="international_call" CHECKED="CHECKED">
+                            {{else}}
+                                <input type="checkbox" name="international_call">
+                            {{/if}}
+                            I want flat-rate calling to 18 countries for $8/month more, per line
+                            -->
                         </div>
 
-                        <!--
-                        {{if internatinal}}
-                            <input type="checkbox" name="international_call" CHECKED="CHECKED">
-                        {{else}}
-                            <input type="checkbox" name="international_call">
-                        {{/if}}
-                        I want flat-rate calling to 18 countries for $8/month more, per line
-                        -->
-
-                        <h2>Flat-Rate Inbound Calling</h2>
-                        <div class="trunk_line">
-                            <div class="left">I want to allow up to <input type="text" id="inbound_calls" size="2" value="${account.inbound_trunks}"/></div>
-                            <div class="right">simultaneous inbound calls to the US-48 at $6.99/month per line</div>
-                            <div class="clear"/>
+                        <div class="trunk_block">
+                            <h2><span class="icon left_arrow"/>  Flat-Rate Inbound Calling</h2>
+                            <div class="trunk_line">
+                                <div class="left">Allow up to<input type="text" id="inbound_calls" size="2" value="${account.inbound_trunks}"/></div>
+                                <div class="right">simultaneous inbound calls to the US-48 at <span class="price">$6.99/month</span> per line</div>
+                                <div class="clear"/>
+                            </div>
+                            <div class="note"><span class="validated invalid"/>NOTE: If you don't want flat-rate, your account will default to pay-per-minute</div>
                         </div>
-                        <div class="note">NOTE: If you don't want flat-rate, your account will default to pay-per-minute</div>
 
                         <div class="buttons_centered">
                             <button class="fancy_button blue submit_channels">Submit</button>
@@ -46,10 +50,10 @@
                     <div id="per_minute">
                         <span>Pay-per-minute allows you to pay only for what you use. Deposit money into your account to get started, then pay-as-you-go for usage.</span>
                         <div class="current_balance_wrapper">
-                            Your Current Balance: $<span class="current_balance">${account.credits.prepay}</span>
+                            <span class="icon price_tag"/>  Your Current Balance: <span class="price_wrapper">$<span class="current_balance">${account.credits.prepay}</span></span>
                         </div>
                         <div class="add_credits_wrapper">
-                            I would like to add <input id="add_credits" type="text" size="4"/> $ to my current balance
+                            I would like to add $<input id="add_credits" type="text" size="4"/> to my current balance
                             <button class="fancy_button blue purchase_credits">Purchase</button>
                         </div>
 
