WINKSTART-785: Work in progress for porting numbers

--- a/numbers/tmpl/port_popup.html
+++ b/numbers/tmpl/port_popup.html
@@ -50,6 +50,7 @@
                                 <option value="Sprint">Sprint</option>
                                 <option value="Other">Other</option>
                             </select>
+                            <input type="text" name="extra.other_carrier" class="other_carrier" placeholder="Carrier's Name"/>
                         </div>
                         <div class="clear"/>
                     </div>
@@ -91,7 +92,7 @@
 
                             <div class="upload_bill">
                                 Upload your current phone bill
-                                <input type="file" name="files" class="files" multiple/>
+                                <input type="file" name="files" class="files"/>
                             </div>
                         </div>
 
