WINKSTART-785: Work in progress for Port Number

--- a/numbers/tmpl/port_popup.html
+++ b/numbers/tmpl/port_popup.html
@@ -57,7 +57,19 @@
 
                     <div class="split_div">
                         <div class="left_part">
-                            Enter your numbers you want to move to the 2600hz service.
+                            Enter the main number you want to move to the 2600hz service
+                        </div>
+
+                        <div class="right_part">
+                            <input type="text" name="port.main_number" class="main_number" placeholder="415-111-2222"/>
+                        </div>
+
+                        <div class="clear"/>
+                    </div>
+
+                    <div class="split_div">
+                        <div class="left_part">
+                            If you want to move additional numbers to the 2600hz service, enter them here
                             <div class="numbers_example">(For ex. 4156886570, 5104568989, ...)</div>
                         </div>
 
@@ -67,7 +79,7 @@
                         <div class="clear"/>
                     </div>
 
-                    <span class="port_help"><span class="validated invalid"/>All the numbers you mentioned above should be from the same carrier and under the same account. If you have multiple carriers for the porting numbers then we suggest to put separate entries.</span>
+                    <span class="port_help"><span class="validated invalid"/>All numbers you want to port should be associated with one bill from your carrier. If you have more than one carrier you'd like to port numbers away from, please send us separate port requests associated with each different bail.</span>
                 </div>
 
                 <div class="step_div second">
@@ -99,7 +111,7 @@
                         <div class="clear"/>
                     </div>
 
-                    <span class="port_help"><span class="validated invalid"/>To process your order we need a copy of your most recent phone bill with at least one phone number listed on it.</span>
+                    <span class="port_help"><span class="validated invalid"/>To process your order we need a copy of your most recent phone bill with at least the main phone number listed on it.</span>
                 </div>
 
                 <div class="step_div third">
