--- a/credits/tmpl/credits_popup.html
+++ b/credits/tmpl/credits_popup.html
@@ -17,7 +17,7 @@
                         <div class="trunk_block">
                             <h2><span class="icon right_arrow"/>  Flat-Rate Outbound Calling</h2>
                             <div class="trunk_line">
-                                <div class="left">Allow up to<input type="text" id="outbound_calls" size="2" value="${account.trunks}"/></div>
+                                <div class="left">Allow up to<input type="text" id="outbound_calls" size="2" value="${trunks}"/></div>
                                 <div class="right">simultaneous outbound calls at <span class="price">$29.99/month</span> per line</div>
                                 <div class="clear"/>
                             </div>
@@ -35,11 +35,11 @@
                         <div class="trunk_block">
                             <h2><span class="icon left_arrow"/>  Flat-Rate Inbound Calling</h2>
                             <div class="trunk_line">
-                                <div class="left">Allow up to<input type="text" id="inbound_calls" size="2" value="${account.inbound_trunks}"/></div>
+                                <div class="left">Allow up to<input type="text" id="inbound_calls" size="2" value="${inbound_trunks}"/></div>
                                 <div class="right">simultaneous inbound calls to the US-48 at <span class="price">$6.99/month</span> per line</div>
                                 <div class="clear"/>
                             </div>
-                            <div class="note"><span class="validated invalid"/>NOTE: If you don't want flat-rate, your account will default to pay-per-minute</div>
+                            <div class="note"><span class="note_icon"/>NOTE: If you don't want flat-rate, your account will default to pay-per-minute</div>
                         </div>
 
                         <div class="buttons_centered">
@@ -50,7 +50,7 @@
                     <div id="per_minute">
                         <span>Pay-per-minute allows you to pay only for what you use. Deposit money into your account to get started, then pay-as-you-go for usage.</span>
                         <div class="current_balance_wrapper">
-                            <span class="icon price_tag"/>  Your Current Balance: <span class="price_wrapper">$<span class="current_balance">${account.credits.prepay}</span></span>
+                            <span class="icon price_tag"/>  Your Current Balance: <span class="price_wrapper">$<span class="current_balance">${credits}</span></span>
                         </div>
                         <div class="add_credits_wrapper">
                             I would like to add $<input id="add_credits" type="text" size="4"/> to my current balance
