--- a/numbers/tmpl/port_popup.html
+++ b/numbers/tmpl/port_popup.html
@@ -79,7 +79,7 @@
                         <div class="clear"/>
                     </div>
 
-                    <span class="port_help"><span class="validated invalid"/>All numbers you want to port should be associated with one bill from your carrier. If you have more than one carrier you'd like to port numbers away from, please send us separate port requests associated with each different bail.</span>
+                    <span class="port_help"><span class="note_icon"/>All numbers you want to port should be associated with one bill from your carrier. If you have more than one carrier you'd like to port numbers away from, please send us separate port requests associated with each different bail.</span>
                 </div>
 
                 <div class="step_div second">
@@ -91,11 +91,11 @@
                         <div class="left_part">
                             <div class="field"><label>Name on Account</label><input type="text" name="port.billing_name"/></div>
                             <div class="field"><label>Account Id</label><input type="text" name="port.billing_account_id" /></div>
+                            <div class="field"><label>Postal Code</label><input id="postal_code" type="text" name="port.billing_postal_code"/></div>
                             <div class="field"><label>Address</label><input type="text" name="port.billing_street_address"/></div>
                             <div class="field"><label>Ext. Address</label><input type="text" name="port.billing_extended_address"/></div>
-                            <div class="field"><label>City</label><input type="text" name="port.billing_locality"/></div>
-                            <div class="field"><label>State</label><input type="text" name="port.billing_region" /></div>
-                            <div class="field"><label>Postal Code</label><input type="text" name="port.billing_postal_code"/></div>
+                            <div class="field"><label>City</label><input id="locality" type="text" name="port.billing_locality"/></div>
+                            <div class="field"><label>State</label><input id="region" type="text" name="port.billing_region" /></div>
                         </div>
 
                         <div class="right_part">
@@ -111,7 +111,7 @@
                         <div class="clear"/>
                     </div>
 
-                    <span class="port_help"><span class="validated invalid"/>To process your order we need a copy of your most recent phone bill with at least the main phone number listed on it.</span>
+                    <span class="port_help"><span class="note_icon"/>To process your order we need a copy of your most recent phone bill with at least the main phone number listed on it.</span>
                 </div>
 
                 <div class="step_div third">
@@ -121,18 +121,18 @@
 
                     <div class="loa_block">
                         1. <a href="http://www.2600hz.com/loa" target="_blank">Download LoA form</a>
-                        <span class="port_help"><span class="validated invalid"/>It takes 5 minutes to fill out this form. This letter is important to process your order.</span>
+                        <span class="port_help"><span class="note_icon"/>It takes 5 minutes to fill out this form. This letter is important to process your order.</span>
                     </div>
 
                     <div class="loa_block">
                         2. Fill out the information and sign it
-                        <span class="port_help"><span class="validated invalid"/>Please ensure that the address on the bill and the LoA match and that the signer of the LoA is the authorized person on the current account or the port will failt.</span>
+                        <span class="port_help"><span class="note_icon"/>Please ensure that the address on the bill and the LoA match and that the signer of the LoA is the authorized person on the current account or the port will failt.</span>
                     </div>
 
                     <div class="loa_block">
                         3. Upload it here
                         <div class="upload_block">Upload signed letter of authorization:&nbsp;&nbsp;<input name="loa" class="loa" type="file"/></div>
-                        <span class="port_help"><span class="validated invalid"/>If you're unable to upload the PDF document, then contact 2600hz representative for an alternative arrangment</span>
+                        <span class="port_help"><span class="note_icon"/>If you're unable to upload the PDF document, then contact 2600hz representative for an alternative arrangment</span>
                     </div>
                 </div>
                 <div class="step_div fourth">
