--- a/numbers/tmpl/e911_dialog.html
+++ b/numbers/tmpl/e911_dialog.html
@@ -10,6 +10,11 @@
                 <p class="clear">Address to display on 911 operator console:<p>
 
                 <div>
+                    <label>Postal Code</label>
+                    <input id="postal_code" type="text" name="postal_code" value="${postal_code}"/>
+                </div>
+
+                <div>
                     <label>Address</label>
                     <input type="text" name="street_address" value="${street_address}" />
                 </div>
@@ -21,17 +26,12 @@
 
                 <div>
                     <label>City</label>
-                    <input type="text" name="locality" value="${locality}" />
+                    <input id="locality" type="text" name="locality" value="${locality}" />
                 </div>
 
                 <div>
                     <label>State</label>
-                    <input type="text" name="region" value="${region}" />
-                </div>
-
-                <div>
-                    <label>Postal Code</label>
-                    <input type="text" name="postal_code" value="${postal_code}"/>
+                    <input id="region" type="text" name="region" value="${region}" />
                 </div>
                 {{if status}}
                     <div>
