--- a/numbers/tmpl/add_number_search_results.html
+++ b/numbers/tmpl/add_number_search_results.html
@@ -1,26 +1,24 @@
 <div>
     <div>
-        <h3 style="text-align: left;">Results</h3>
-        <hr/>
         {{if data.length == 0}}
             <div class="errMsg">
                     There are no numbers available in the specified NPA.
             </div>
         {{else}}
-            <form id="addDIDForm">
+            <div id="addDIDForm">
                 <div class="user_tab">
-                    <div class="row">
+                    <div class="row_table">
                         <div class="first column">Select</div>
                         <div class="second column">Number</div>
                     </div>
                     {{each(i, phone_number) data}}
-                        <div class="row">
-                            <div class="first column"><input type="checkbox" data-phone_number="${phone_number}"/></div>
+                        <div class="row_table">
+                            <div class="first column"><input type="checkbox" class="checkbox_number" data-price="1" data-phone_number="${phone_number}"/></div>
                             <div class="second column">${phone_number}</div>
                         </div>
                     {{/each}}
                 </div>
-            </form>
+            </div>
         {{/if}}
     </div>
 <div>
